--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!-- index.html (Portal Page) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Stories Portal</n  >
+  <title>Stories Portal</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -17,4 +16,3 @@
     </ul>
   </div>
 </body>
-</html>
