add blader ninja story

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1 class="text-2xl font-bold mb-4">📖 Story Portal</h1>
     <ul class="list-disc pl-5 space-y-2">
       <li><a href="story.html?story=mssa-mayhem" class="text-blue-600 hover:underline">MSSA Mayhem</a></li>
-      <!-- Add more stories here -->
+	  <li><a href="story.html?story=bladder-ninja-the-UTI-challenge" class="text-blue-600 hover:underline">Bladder Ninja: The UTI Challenge</a></li>
+	  <!-- Add more stories here -->
       <!-- <li><a href="story.html?story=another-story" class="text-blue-600 hover:underline">Another Story</a></li> -->
     </ul>
   </div>
