--- a/story.html
+++ b/story.html
@@ -22,94 +22,84 @@
   </div>
 
   <script>
-    // Parse story ID from URL
+    // Get story ID from URL
     const params = new URLSearchParams(window.location.search);
-    const storyId = params.get('story') || 'mssa-mayhem';
-    let scenarios;
-    let drugInfo;
+    const storyId = params.get('story') || '';
+    let scenarios = {}, drugInfo = {};
 
     // SVG helper
     function createSVG(html) {
-      const tpl = document.createElement('template');
-      tpl.innerHTML = html.trim();
+      const tpl = document.createElement('template'); tpl.innerHTML = html.trim();
       return tpl.content.firstChild;
     }
-    const InfoIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 text-blue-600 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M12 2.25c5.385 0 9.75 4.365 9.75 9.75S17.385 21.75 12 21.75 2.25 17.385 2.25 12 6.615 2.25 12 2.25z" /></svg>`;
-    const ShieldIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-green-600 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m1-2a9 9 0 11-8 0v5a2 2 0 002 2h4a2 2 0 010 0V6z" /></svg>`;
+    const InfoIconSVG   = `<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 text-blue-600 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M12 2.25c5.385 0 9.75 4.365 9.75 9.75S17.385 21.75 12 21.75 2.25 17.385 2.25 12 6.615 2.25 12 2.25z"/></svg>`;
+    const ShieldIconSVG = `<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-green-600 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m1-2a9 9 0 11-8 0v5a2 2 0 002 2h4a2 2 0 010 0V6z"/></svg>`;
 
     // Modal logic
     const modal = document.getElementById('modal');
     const modalTitle = document.getElementById('modal-title');
     const modalContent = document.getElementById('modal-content');
     document.getElementById('modal-close').addEventListener('click', () => modal.classList.add('hidden'));
-    function showModal(title) {
-      const info = drugInfo[title];
-      // build HTML from subfields
+
+    function showModal(name) {
+      const info = drugInfo[name];
+      if (!info) return;
       const html = `
-        <strong>${title}</strong>
+        <strong>${name}</strong>
         <ul class="list-disc ml-5">
-          <li>Spectrum: ${info.Spectrum}</li>
-          <li>PK: ${info.PK}</li>
-          <li>Toxicities: ${info.Toxicities}</li>
+          <li><strong>Spectrum:</strong> ${info.Spectrum}</li>
+          <li><strong>PK:</strong> ${info.PK}</li>
+          <li><strong>Toxicities:</strong> ${info.Toxicities}</li>
         </ul>
       `;
-      modalTitle.textContent = '';
-      modalTitle.append(createSVG(ShieldIconSVG), document.createTextNode(' ' + title + ' Info'));
+      modalTitle.textContent = ''; modalTitle.append(createSVG(ShieldIconSVG), document.createTextNode(' ' + name + ' Info'));
       modalContent.innerHTML = html;
       modal.classList.remove('hidden');
     }
 
-    // Load story JSON (with scenarios + drugInfo)
+    // Load story JSON (scenarios + drugInfo)
     fetch(`stories/${storyId}.json`)
-      .then(res => {
-        if (!res.ok) throw new Error(`Story not found (${res.status})`);
-        return res.json();
-      })
-      .then(data => {
-        scenarios = data.scenarios;
-        drugInfo = data.drugInfo;
-        render();
-      })
+      .then(r => { if (!r.ok) throw new Error('Story not found'); return r.json(); })
+      .then(data => { scenarios = data.scenarios; drugInfo = data.drugInfo; render(); })
       .catch(err => {
         console.error(err);
-        document.getElementById('app').innerHTML = `<div class="p-4 text-red-600">Could not load story “${storyId}”.</div>`;
+        document.getElementById('app').innerHTML = `<div class="p-4 text-red-600">Could not load story '${storyId}'.</div>`;
       });
 
-    let currentScene = 'intro';
+    let current = 'intro';
     function render() {
-      const app = document.getElementById('app');
-      app.innerHTML = '';
-      const sc = scenarios[currentScene];
+      const app = document.getElementById('app'); app.innerHTML = '';
+      const sc = scenarios[current] || { text: 'Unknown scene', options: [] };
 
-      // Story text with inline drug links
-      const card = document.createElement('div');
-      card.className = 'bg-white rounded-lg shadow p-6 text-lg whitespace-pre-wrap';
-      sc.text.split(/(Vancomycin|Cefazolin|Nafcillin|Daptomycin|Ceftriaxone)/g).forEach((seg, i) => {
-        if (drugInfo[seg]) {
+      // Build regex from drugInfo keys
+      const keys = Object.keys(drugInfo).map(k => k.replace(/[-/\\^$*+?.()|[\]{}]/g, '\\$&'));
+      const regex = new RegExp(`\b(${keys.join('|')})\b`, 'g');
+
+      // Story text
+      const card = document.createElement('div'); card.className = 'bg-white shadow rounded p-6 text-lg whitespace-pre-wrap';
+      sc.text.split(regex).forEach(part => {
+        if (drugInfo[part]) {
           const btn = document.createElement('button');
           btn.className = 'inline-flex items-center text-blue-600 hover:text-blue-800 underline';
-          btn.textContent = seg;
-          btn.append(createSVG(InfoIconSVG));
-          btn.addEventListener('click', () => showModal(seg));
+          btn.textContent = part; btn.append(createSVG(InfoIconSVG));
+          btn.addEventListener('click', () => showModal(part));
           card.append(btn);
         } else {
-          card.append(document.createTextNode(seg));
+          card.append(document.createTextNode(part));
         }
       });
       app.append(card);
 
-      // Options + pop-up buttons
-      const opts = document.createElement('div');
-      opts.className = 'flex flex-col space-y-2';
+      // Options
+      const opts = document.createElement('div'); opts.className = 'flex flex-col space-y-2 mt-4';
       sc.options.forEach(opt => {
-        const clean = opt.replace('Emp','');
-        const row = document.createElement('div');
-        row.className = 'flex items-center space-x-2';
-        const btn = document.createElement('button');
-        btn.className = 'flex-1 bg-blue-500 hover:bg-blue-600 text-white py-2 rounded';
-        btn.textContent = opt==='start'?'Next':clean;
-        btn.addEventListener('click', () => { currentScene = opt==='Restart'?'intro':opt; render(); });
-        row.append(btn);
+        const clean = opt.replace(/Emp$/, '');
+        const row = document.createElement('div'); row.className = 'flex items-center space-x-2';
+        const b = document.createElement('button');
+        b.className = 'flex-1 bg-blue-500 hover:bg-blue-600 text-white py-2 rounded';
+        b.textContent = opt === 'start' ? 'Next' : clean;
+        b.addEventListener('click', () => { current = opt === 'Restart' ? 'intro' : opt; render(); });
+        row.append(b);
         if (drugInfo[clean]) {
           const ib = document.createElement('button');
           ib.className = 'inline-flex items-center border border-blue-500 hover:bg-blue-50 px-3 py-1 rounded';
