--- a/story.html
+++ b/story.html
@@ -8,7 +8,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-  <div id="app" class="max-w-xl mx-auto mt-10 space-y-6"></div>
+  <!-- Back to portal button -->
+  <div class="max-w-xl mx-auto mt-6">
+    <a href="index.html" class="inline-block mb-4 text-blue-600 hover:underline">← Back to Stories</a>
+  </div>
+  <div id="app" class="max-w-xl mx-auto mt-2 space-y-6"></div>
 
   <!-- Modal -->
   <div id="modal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center">
